--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 <div class="main">
 	<div class="left">
-		<img src="penguins.jpg">
+		<img src="Penguins.jpg">
 		<h2>deviramya</h2>
 		<h3>16NN1A1243</h3>
 		<h4>vignan nirula</h4>
